--- a/gradle.properties
+++ b/gradle.properties
@@ -57,3 +57,9 @@ mod_group_id=net.sam.hotchocomod
 mod_authors=Tim, Jerry
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
 mod_description=adds in hot chocolate, pretty straight forward
+
+create_minecraft_version = 1.20.1
+flywheel_minecraft_version = 1.20.1
+create_version = 0.5.1.e-22
+flywheel_version = 0.6.10-7
+registrate_version = MC1.20-1.3.3
