--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -68,3 +68,9 @@ description='''${mod_description}'''
 # stop your mod loading on the server for example.
 #[features.${mod_id}]
 #openGLVersion="[3.2,)"
+[dependencies.hotchocomod]]
+modId="create"
+mandatory=true
+versionRange="[0.5.1.e,)"
+ordering="NONE"
+side="BOTH"
